--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,18 @@
     <link rel="icon" href="./images/logo.svg">
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
-  <body class="page__body">
+  <body class="page__body" id="home">
 
     <header class="page__header header">
       <div class="header__content">
         <div class="header__top">
           <div class="container">
             <nav class="header__nav nav">
-              <a href="#menu" class="header__menu-icon icon"></a>
+              <a 
+                href="#menu" 
+                class="header__menu-icon icon"
+              >
+              </a>
 
               <a
                 href="#home"
@@ -54,7 +58,7 @@
           </h1>
       
           <a 
-            href="#" 
+            href="#actions" 
             class="buy-link 
             grid__item 
             grid__item--onTab_1-3 
@@ -76,7 +80,57 @@
       </div>
     </header>
 
-    <section class="page__actions actions">
+    <div 
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a 
+              href="#home" 
+              class="menu__logo logo icon"
+            >
+            </a>
+
+            <a 
+              href="#" 
+              class="menu__close icon">
+            </a>
+          </div>
+
+          <nav class="menu__nav">
+            <ul class="menu__nav-list">
+              <li class="menu__nav-item">
+                <a href="#gallery" class="menu__nav-link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="menu__nav-item">
+                <a href="#subsribe" class="menu__nav-link">
+                  Про нас
+                </a>
+              </li>
+
+              <li class="menu__nav-item">
+                <a href="#actions" class="menu__nav-link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="menu__nav-item">
+                <a href="#contacts" class="menu__nav-link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+
+    <section class="page__actions actions" id="actions">
       <div class="container">
         <h2 class="actions__title title">
           Актуальні 
@@ -195,38 +249,268 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section 
+      class="page__gallery gallery"
+      id="gallery"
+    >
       <div class="container">
-        <h2 class="gallery__title tiltle">
+        <h2 class="gallery__title title">
           Галерея
         </h2>
 
-        <div class="gallery__pictures">
-          <img 
-            src="#" 
-            alt="picture-1" 
-            class="gallery__picture-1"
+        <div 
+          class="gallery__pictures 
+          grid 
+          grid--device"
+        >
+          <div 
+            class="gallery__picture 
+            gallery__picture-1
+            grid__item
+            grid__item--onTab_1-3
+            grid__item--onDesktop_1-4"
           >
+          </div>
 
-          <img 
-            src="#" 
-            alt="picture-2" 
-            class="gallery__picture-2"
-          >
+          <div 
+            class="gallery__picture 
+            gallery__picture-2
+            grid__item
+            grid__item--onTab_4-6
+            grid__item--onDesktop_5-12">
+          </div>
 
-          <img 
-            src="#" 
-            alt="picture-3" 
-            class="gallery__picture-3"
-          >
+          <div 
+            class="gallery__picture 
+            gallery__picture-3
+            grid__item
+            grid__item--onDesktop_1-8">
+          </div>
 
-          <img 
-            src="#" 
-            alt="picture-4" 
-            class="gallery__picture-4"
-          >
+          <div 
+            class="gallery__picture 
+            gallery__picture-4
+            grid__item
+            grid__item--onDesktop_9-12">
+          </div>
+        </div>
+
+        <div class="gallery__buttons">
+          <a class="gallery__button"></a>
+          <a class="gallery__button"></a>
+          <a class="gallery__button"></a>
+          <a class="gallery__button"></a>
         </div>
       </div>
     </section>
+
+    <section class="page__subscribe subscribe">
+      <div class="container">
+        <div class="grid grid--device">
+          <h2
+            class="subscribe__title
+            title
+            grid__item
+            grid__item--onTab_2-5
+            grid__item--onDesktop_5-8"
+          >
+            Підписка
+          </h2>
+          <p
+            class="subscribe__text
+            grid__item
+            grid__item--onTab_2-5
+            grid__item--onDesktop_4-9"
+          >
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="subscribe__form
+            grid__item
+            grid__item--onTab_2-5
+            grid__item--onDesktop_4-9"
+            id="subscribe"
+          >
+            <input
+              name="e-mail"
+              type="email"
+              placeholder="E-mail"
+              required
+              class="subscribe__input"
+            >
+          
+            <button class="subscribe__button icon"></button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div 
+            class="footer__top 
+            grid__item 
+            grid__item--onMob_1-2
+            grid__item--onTab_1-1
+            grid__item--onDesktop_1-1"
+          >
+            <a 
+              href="#home" 
+              class="footer__logo 
+              logo
+              logo--footer 
+              icon"
+            >
+            </a>
+
+            <a 
+              href="#"
+              class="footer__social
+              footer__social--facebook
+              icon">
+            </a>
+
+            <a 
+              href="#"
+              class="footer__social
+              footer__social--instagram
+              icon">
+            </a>
+          </div>
+
+          <div 
+            class="footer__schedule
+            schedule
+            grid__item 
+            grid__item--onMob_1-1
+            grid__item--onTab_2-3
+            grid__item--onDesktop_3-4"
+          >
+
+            <h4 class="schedule__title">
+              Графік роботи
+            </h4>
+
+            <p class="schedule__time">
+              <span class="schedule__t">
+                12:00 — 20:00
+              </span> середа<br>
+              <span class="schedule__t">
+                12:00 — 20:00
+              </span> четвер<br>
+              <span class="schedule__t">
+                12:00 — 20:00
+              </span> п’ятниця<br>
+              <span class="schedule__t">
+                11:00 — 19:00
+              </span> субота<br>
+              <span class="schedule__t">
+                11:00 — 19:00
+              </span> неділя<br>
+            </p>
+
+            <p class="shedule__info">
+              Вихідні понеділок, вівторок<br> 
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+
+          </div>
+
+          <div 
+            class="contacts
+            grid__item
+            grid__item--onMob_2-2
+            grid__item--onTab_4-5
+            grid__item--onDesktop_5-6"
+            id="contacts"
+          >
+
+            <h4 class="contacts__title">
+              Контакти:
+            </h4>
+
+            <p class="contacts__info">
+              <a 
+                href="https://goo.gl/maps/s1ddpCHFqDd5Xp4L7" target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a href="tel:+38 (044) 278-13-57">
+                тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              факс +38 (044) 278-74-54<br>
+              <a href="mailto:info@namu.kiev.ua">
+                e-mail: info@namu.kiev.ua
+              </a>
+              <br>
+            </p>
+          </div>
+
+          <a 
+            href="#home" 
+            class="footer__button
+            grid__item
+            grid__item--onMob_2-2
+            icon">
+          </a>
+
+          <div 
+            class="footer__line
+            grid__item
+            grid__item--onMob_1-2
+            grid__item--onTab_2-5
+            grid__item--onDesktop_7-7"
+          >
+          </div>
+
+          <nav 
+            class="footer__navigation 
+            navigation 
+            grid__item 
+            grid__item--onMob_1-2
+            grid__item--onTab_2-5
+            grid__item--onDesktop_8-11"
+          >
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="#gallery" class="navigation__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="navigation__item">
+                <a href="#subscribe" class="navigation__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="navigation__item">
+                <a href="#actions" class="navigation__link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="navigation__item">
+                <a href="#contacts" class="navigation__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div 
+            class="footer__bottom"
+          >
+            <p>Designed by Zhyriada Marina</p>
+
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
