--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ukr" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="shortcut icon" href="../src/images/NAMU.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__section header grid grid--widescreen">
+      <div class="grid__item header__wrap grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-12">
+        <div class="header__bg">
+          <a href="#menu" class="header__menu"></a>
+          <h1 class="header__logo">NA <br> MU</h1>
+        </div>
+
+        <div class="header__content">
+          <a href="#menu" class="header__menu header__menu--tablet"></a>
+          <h1 class="header__content-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <a href="#" class="header__content-button">Квитки</a>
+
+          <div class="header__content-element">
+            <div class="header__content-element--line"></div>
+            <a class="header__content-element--link"
+            href="#">ПОДІЇ</a>
+          </div>
+
+        </div>
+      </div>
+    </header>
+
+    <main class="page__section main">
+
+    </main>
+
+    <footer class="page__section footer">
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
