--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./images/logo.svg"
+    >
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello</h1>
+  <body class="page__body">
+    <header class="header page__section">
+      <div class="header__image-container">
+        <img src="./images/header.png" alt="museum" class="header__image" >
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <div class="top-actions">
+            <a href="#menu" class="icon icon--menu"></a>
+
+            <a href="#" class="logo">
+              <img
+                class="logo__image"
+                src="./images/logo.svg"
+                alt="NAMU"
+              >
+            </a>
+          </div>
+
+          <div class="header__text">
+            <h1 class="header__title">
+              Художній
+              <br>
+              Музей
+            </h1>
+
+
+            <div class="header__button">
+              <div class="header__button-text">КВИТКИ</div>
+              <a href="/" class="header__button-link"></a>
+            </div>
+
+
+            <div class="header__events">
+              ПОДІЇ
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="top-actions menu__top">
+            <a href="#" class="icon icon--cross"></a>
+            <a href="#" class="logo">
+              <img
+                class="logo__image"
+                src="./images/logo.svg"
+                alt="NAMU"
+              >
+            </a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Актуальні події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#now-on-view" class="menu__link">Підписка</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Графік роботи</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a
+            href="https://goo.gl/maps/iRgAt3XfHMRd1Any8"
+            class="menu__contact"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="menu__contact"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
