--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page__section header grid grid--widescreen">
       <div class="grid__item header__wrap grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-12">
         <div class="header__bg">
           <a href="#menu" class="header__menu"></a>
-          <h1 class="header__logo">NA <br> MU</h1>
+          <a href="#" class="header__logo">NA <br> MU</a>
         </div>
 
         <div class="header__content">
@@ -26,16 +28,128 @@
 
           <div class="header__content-element">
             <div class="header__content-element--line"></div>
-            <a class="header__content-element--link"
-            href="#">ПОДІЇ</a>
+            <a class="header__content-element--link" href="#podii">ПОДІЇ</a>
           </div>
 
         </div>
       </div>
     </header>
 
-    <main class="page__section main">
+    <div class="page__menu menu" id="menu">
+      <div class="wrap">
+        <div class="menu__content">
+          <a href="#" class="menu__icon"></a>
 
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#podii" class="menu__link">Події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">Підписка</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+          <h1 class="menu__logo">NA <br> MU</h1>
+        </div>
+      </div>
+    </div>
+
+    <main class="page__main main">
+      <div class="page__section podii" id="podii">
+        <div class="wrap">
+          <div class="grid">
+            <div class="podii__title grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-1-5">Актуальні
+              події
+            </div>
+            <div class="podii__image grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-7">
+              <img
+              class="podii__image--item"
+              src="images/podii1.jpg"
+              alt="podii1"
+              >
+            </div>
+            <div class="podii__content grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-9-12">
+              <div class="podii__content-info">
+                <h3 class="podii__content-subtitle">
+                  ВИСТАВКА
+                </h3>
+
+                <h3 class="podii__content-date">
+                  26.08-29.11.2019
+                </h3>
+              </div>
+              <h2 class="podii__content-title">Йду і повертаюсь
+              </h2>
+              <p class="podii__content-text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+
+            </div>
+
+            <div class="podii__image grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-7">
+              <img
+              class="podii__image--item"
+              src="images/podii2.jpg"
+              alt="podii2"
+              >
+            </div>
+            <div class="podii__content grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-9-12">
+              <div class="podii__content-info">
+                <h3 class="podii__content-subtitle">
+                  ВИСТАВКА
+                </h3>
+
+                <h3 class="podii__content-date">
+                  26.08-29.11.2019
+                </h3>
+              </div>
+              <h2 class="podii__content-title">І спогади і мрії
+              </h2>
+              <p class="podii__content-text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="podii__block--wide">
+          <div class="podii__block-container">
+            <div class="podii__block-info">
+              <h3 class="podii__block-subtitle">
+                ВИСТАВКА
+              </h3>
+
+              <h3 class="podii__block-date">
+                26.08-29.11.2019
+              </h3>
+            </div>
+            <h2 class="podii__block-title">Від класицизму до романтизму
+            </h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section gallery" id="gallery">
+        <div class="wrap">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__slider--mobile grid"></div>
+
+          <div class="gallery__buttons">
+
+          </div>
+
+          <div class="gallery__slider--desktop grid">
+            <div class="gallery__slider-item gallery__slider-item--1 grid__item--Desktop-1-5"></div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="page__section footer">
