--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NAMU.png"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    >
+    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page_body">
+    <header class="header page__section" hidden>
+      <div class="container">
+        <div class="header_nav">
+          <a href="#menu" class="icon"></a>
+
+          <a href="#" class="logo">
+            <img
+              class="logo_image"
+              src="./images/NAMU.png"
+              alt="NAMU"
+            >
+          </a>
+        </div>
+
+
+        <h1 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+      </div>
+    </header>
+
+    <main class="page__main">
+      <section class="page__section actualSubmissions" id="actualSubmissions">
+        <div class="container">
+          <h2
+            class="
+              page__section-title
+              page__section-title-tablet
+              actualSubmissions__title
+            "
+          >
+                Актуальні події
+          </h2>
+
+          <div class="actualSubmissions__place place">
+            <div class="place__photos">
+              <div class="place__photos--1">
+                <div class="grid place__photo--1 grid__item--desktop-1-7">
+                  <div
+                    class="
+                      grid__item--1-2
+                      grid__item--tablet-1-6
+                      grid__item--desktop-1-7
+                    "
+                  >
+                    <div class="place__photo-container">
+                      <img
+                      class="place__photo"
+                      src="./images/AS1.jpg"
+                      alt="AS1"
+                      >
+                    </div>
+                  </div>
+                </div>
+
+                <div class="place__photos--1-description grid__item--desktop-9-12">
+                  <div class="grid">
+                    <div
+                      class="
+                        grid__item--1-2
+                        grid__item--tablet-1-2
+                        grid__item--desktop-9-12
+                      "
+                    >
+                      <div class="place__exhibition">
+                        <p class="place__exhibition--show">
+                          ВИСТАВКА
+                        </p>
+                        <p class="place__exhibition--data">
+                          26.08-29.11.2019
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid">
+                    <div
+                      class="
+                        grid__item--1-2
+                        grid__item--tablet-1-4
+                        grid__item--desktop-9-12
+                      "
+                    >
+                      <div class="place__description">
+                        <h3 class="place__title">
+                          Йду і повертаюсь
+                        </h3>
+                        <p class="place__paragraf">
+                          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid">
+                <div
+                  class="
+                    grid__item--1-2
+                    grid__item--tablet-1-6
+                    grid__item--desktop-6-12
+                  "
+                >
+                  <div class="place__photo-container">
+                    <img
+                    class="place__photo"
+                    src="./images/AS2.jpg"
+                    alt="AS1"
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid">
+                <div
+                  class="
+                    grid__item--1-2
+                    grid__item--tablet-1-2
+                    grid__item--desktop-6-12
+                  "
+                >
+                  <div class="place__exhibition">
+                    <p class="place__exhibition--show">
+                      ВИСТАВКА
+                    </p>
+
+                    <p class="place__exhibition--data">
+                      26.08-29.11.2019
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid">
+                <div
+                  class="
+                    grid__item--1-2
+                    grid__item--tablet-1-4
+                    grid__item--desktop-6-12
+                  "
+                >
+                  <div class="place__description">
+                    <h3 class="place__title">
+                      І спогади і мрії
+                    </h3>
+                    <p class="place__paragraf place__paragraf--tablet">
+                      Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid">
+                <div
+                  class="
+                    grid__item--1-2
+                    grid__item--tablet-1-6
+                    grid__item--desktop-6-12
+                  "
+                >
+                  <div class="place__photo-container">
+                    <img
+                    class="place__photo"
+                    src="./images/AS3.jpg"
+                    alt="AS1"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
