--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk" class="page">
+<html lang="uk" class="html">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,106 +25,205 @@
 
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body">
-    <header class="header page__section">
-      <div class="header__image-container">
-        <img src="./images/header.png" alt="museum" class="header__image" >
-      </div>
-      <div class="container">
-        <div class="header__content">
-          <div class="top-actions">
-            <a href="#menu" class="icon icon--menu"></a>
+  <body class="html__body">
+    <div class="html__wrapper">
+      <header class="header html__section">
+        <div class="container top-actions">
+          <a href="#menu" class="icon icon--menu"></a>
 
-            <a href="#" class="logo">
-              <img
-                class="logo__image"
-                src="./images/logo.svg"
-                alt="NAMU"
-              >
-            </a>
-          </div>
-
-          <div class="header__text">
-            <h1 class="header__title">
-              Художній
-              <br>
-              Музей
-            </h1>
-
-
-            <div class="header__button">
-              <div class="header__button-text">КВИТКИ</div>
-              <a href="/" class="header__button-link"></a>
-            </div>
-
-
-            <div class="header__events">
-              ПОДІЇ
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-    </header>
-
-    <nav class="page__menu menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div class="top-actions menu__top">
-            <a href="#" class="icon icon--cross"></a>
-            <a href="#" class="logo">
-              <img
-                class="logo__image"
-                src="./images/logo.svg"
-                alt="NAMU"
-              >
-            </a>
-          </div>
-
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">Актуальні події</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#about-us" class="menu__link">Галерея</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#now-on-view" class="menu__link">Підписка</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#contacts" class="menu__link">Графік роботи</a>
-            </li>
-
-            <li class="menu__item">
-              <a href="#contacts" class="menu__link">Контакти</a>
-            </li>
-          </ul>
-
-          <a
-            href="https://goo.gl/maps/iRgAt3XfHMRd1Any8"
-            class="menu__contact"
-            target="_blank"
-          >
-            вул. М. Грушевського, 6; Київ, 01001
-          </a>
-
-          <a
-            href="tel:+38 (044) 278-13-57"
-            class="menu__contact"
-          >
-            тел. +38 (044) 278-13-57
+          <a href="#" class="logo">
+            <img
+              class="logo__image"
+              src="./images/logo.svg"
+              alt="NAMU"
+            >
           </a>
         </div>
-      </div>
-    </nav>
+      </header>
 
-    <main class="main"></main>
+      <nav class="html__menu menu" id="menu">
+        <div class="container">
+          <div class="menu__content">
+            <div class="top-actions">
+              <a href="#" class="icon icon--cross"></a>
+              <a href="#" class="logo">
+                <img
+                  class="logo__image"
+                  src="./images/logo.svg"
+                  alt="NAMU"
+                >
+              </a>
+            </div>
 
-    <footer class="footer"></footer>
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Актуальні події</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#about-us" class="menu__link">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#now-on-view" class="menu__link">Підписка</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Графік роботи</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+
+            <a
+              href="https://goo.gl/maps/iRgAt3XfHMRd1Any8"
+              class="menu__contact"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="menu__contact"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </div>
+        </div>
+      </nav>
+
+      <main class="page html__main">
+        <section class="page__main main">
+          <div class="main__container container">
+
+            <div class="main__content">
+              <h1 class="main__title">
+                Художній
+                <br>
+                Музей
+              </h1>
+
+              <div class="main__actions">
+                <div class="main__actions-text">КВИТКИ</div>
+                <a href="/" class="main__actions-link"></a>
+              </div>
+
+              <div class="main__events">
+                ПОДІЇ
+              </div>
+
+            </div>
+
+            <img
+              src="./images/header.png"
+              alt="museum"
+              class="main__image"
+            >
+          </div>
+        </section>
+        <section class="page__main subscr">
+          <h1 class="subscr__title">Підписка</h1>
+          <div class="subscr__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <div class="subscr__form">
+            <input
+                  name="email"
+                  placeholder="Email"
+                  type="email"
+                  class="subscr__form-field"
+                >
+            <a href="/" class="subscr__form-link"></a>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <div class="container footer__hider">
+          <div class="footer__container">
+            <div class="footer__logos">
+              <a href="#" class="logo footer__logo">
+                <img
+                  class="logo__image"
+                  src="./images/logo.svg"
+                  alt="NAMU"
+                >
+              </a>
+              <div class="footer__icons">
+                <a href="/" class="icon icon--fb"></a>
+                <a href="/" class="icon icon--inst"></a>
+              </div>
+            </div>
+
+            <div class="footer__content">
+              <div class="footer__section">
+                <div class="footer__section-name">Графік роботи</div>
+                <div class="footer__wraper">
+                  <p class="footer__time">12:00 — 20:00</p>
+                  <p class="footer__day">середа </p>
+                </div>
+                <div class="footer__wraper">
+                  <p class="footer__time">12:00 — 20:00</p>
+                  <p class="footer__day">четвер</p>
+                </div>
+                <div class="footer__wraper">
+                  <p class="footer__time">12:00 — 20:00</p>
+                  <p class="footer__day">п’ятниця</p>
+                </div>
+                <div class="footer__wraper">
+                  <p class="footer__time">11:00 — 19:00 </p>
+                  <p class="footer__day">субота</p>
+                </div>
+                <div class="footer__wraper">
+                  <p class="footer__time">11:00 — 19:00</p>
+                  <p class="footer__day">неділя</p>
+                </div>
+
+                <p class="footer__weekends">
+                  Вихідні понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+
+              <div class="footer__section">
+                <div class="footer__section-name">Контакти:</div>
+                <p class="footer__adress">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br>
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                  <br>
+                  e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <a href="#" class="footer__arrow"></a>
+
+          <div class="footer__line"></div>
+
+          <div class="footer__nav">
+            <div class="footer__nav-1">
+              <a href="/" class="footer__nav-item">Галерея</a>
+              <a href="/" class="footer__nav-item">Виставки та події</a>
+            </div>
+            <div class="footer__nav-2">
+              <a href="/" class="footer__nav-item">Про Нас</a>
+              <a href="/" class="footer__nav-item">Контакти</a>
+            </div>
+          </div>
+
+          <div class="footer__rights">
+            <div>Designed by Zhyriada Marina</div>
+            <div>Copyright © 2019. All Rights Reserved.</div>
+          </div>
+        </div>
+      </footer>
+    </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
