--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page_body">
-    <header class="header page__section" hidden>
+    <header class="header page__section">
       <div class="container">
         <div class="header_nav">
           <a href="#menu" class="icon"></a>
@@ -43,157 +43,131 @@
     </header>
 
     <main class="page__main">
-      <section class="page__section actualSubmissions" id="actualSubmissions">
+      <section class="page__section currentEvents" id="currentEvents">
         <div class="container">
-          <h2
-            class="
-              page__section-title
-              page__section-title-tablet
-              actualSubmissions__title
-            "
-          >
+          <h2 class="page__section-title">
                 Актуальні події
           </h2>
 
-          <div class="actualSubmissions__place place">
-            <div class="place__photos">
-              <div class="place__photos--1">
-                <div class="grid place__photo--1 grid__item--desktop-1-7">
-                  <div
-                    class="
-                      grid__item--1-2
-                      grid__item--tablet-1-6
-                      grid__item--desktop-1-7
-                    "
-                  >
-                    <div class="place__photo-container">
-                      <img
-                      class="place__photo"
-                      src="./images/AS1.jpg"
-                      alt="AS1"
-                      >
-                    </div>
-                  </div>
-                </div>
+          <div class="grid grid--desktop">
+            <img
+              class="
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7
+                currentEvents__photo
+              "
+              src="./images/AS1.jpg"
+              alt="AS1"
+            >
 
-                <div class="place__photos--1-description grid__item--desktop-9-12">
-                  <div class="grid">
-                    <div
-                      class="
-                        grid__item--1-2
-                        grid__item--tablet-1-2
-                        grid__item--desktop-9-12
-                      "
-                    >
-                      <div class="place__exhibition">
-                        <p class="place__exhibition--show">
-                          ВИСТАВКА
-                        </p>
-                        <p class="place__exhibition--data">
-                          26.08-29.11.2019
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="grid">
-                    <div
-                      class="
-                        grid__item--1-2
-                        grid__item--tablet-1-4
-                        grid__item--desktop-9-12
-                      "
-                    >
-                      <div class="place__description">
-                        <h3 class="place__title">
-                          Йду і повертаюсь
-                        </h3>
-                        <p class="place__paragraf">
-                          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            <div
+              class="
+                grid__item
+                grid__item--tablet-1-4
+                grid__item--desktop-9-12
+              "
+            >
+              <div class="currentEvents__exhibition">
+                <p class="currentEvents__exhibition--show">
+                  ВИСТАВКА
+                </p>
+                <p class="currentEvents__exhibition--data">
+                  26.08-29.11.2019
+                </p>
               </div>
 
-              <div class="grid">
-                <div
-                  class="
-                    grid__item--1-2
-                    grid__item--tablet-1-6
-                    grid__item--desktop-6-12
-                  "
-                >
-                  <div class="place__photo-container">
-                    <img
-                    class="place__photo"
-                    src="./images/AS2.jpg"
-                    alt="AS1"
-                    >
-                  </div>
-                </div>
+              <div class="currentEvents__description">
+                <h3 class="currentEvents__title">
+                  Йду і повертаюсь
+                </h3>
+                <p class="currentEvents__paragraf">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <img
+              class="
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7
+                currentEvents__photo
+              "
+              src="./images/AS2.jpg"
+              alt="AS1"
+            >
+
+            <div
+              class="
+                grid__item
+                grid__item--tablet-1-4
+                grid__item--desktop-9-12
+              "
+            >
+              <div class="currentEvents__exhibition">
+                <p class="currentEvents__exhibition--show">
+                  ВИСТАВКА
+                </p>
+                <p class="currentEvents__exhibition--data">
+                  26.08-29.11.2019
+                </p>
               </div>
 
-              <div class="grid">
-                <div
-                  class="
-                    grid__item--1-2
-                    grid__item--tablet-1-2
-                    grid__item--desktop-6-12
-                  "
-                >
-                  <div class="place__exhibition">
-                    <p class="place__exhibition--show">
-                      ВИСТАВКА
-                    </p>
+              <div class="currentEvents__description">
+                <h3 class="currentEvents__title">
+                  І спогади і мрії
+                </h3>
+                <p class="currentEvents__paragraf currentEvents__paragraf--tablet">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
 
-                    <p class="place__exhibition--data">
-                      26.08-29.11.2019
-                    </p>
-                  </div>
-                </div>
+            <img
+              class="
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-12
+                currentEvents__photo
+              "
+              src="./images/AS3.jpg"
+              alt="AS1"
+            >
+
+
+            <div
+              class="
+                currentEvents__lection
+                grid__item--tablet-1-6
+                grid__item--desktop-1-12
+              "
+            >
+              <div class="currentEvents__lection--container">
+                <p class="currentEvents__lection--lection">ЛЕКЦІЯ</p>
+
+                <p class="currentEvents__lection--data">26.08.2019 - 11:00</p>
               </div>
 
-              <div class="grid">
-                <div
-                  class="
-                    grid__item--1-2
-                    grid__item--tablet-1-4
-                    grid__item--desktop-6-12
-                  "
-                >
-                  <div class="place__description">
-                    <h3 class="place__title">
-                      І спогади і мрії
-                    </h3>
-                    <p class="place__paragraf place__paragraf--tablet">
-                      Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="grid">
-                <div
-                  class="
-                    grid__item--1-2
-                    grid__item--tablet-1-6
-                    grid__item--desktop-6-12
-                  "
-                >
-                  <div class="place__photo-container">
-                    <img
-                    class="place__photo"
-                    src="./images/AS3.jpg"
-                    alt="AS1"
-                    >
-                  </div>
-                </div>
-              </div>
+              <p class="currentEvents__lection--name">Від класицизму до романтизму</p>
             </div>
           </div>
         </div>
       </section>
+
+      <section class="page__section currentEvents" id="gallery">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+
+          <div class="grid grid--desktop">
+
+          </div>
+        </div>
+      </section>
+
+
     </main>
   </body>
 </html>
