current gallery added

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page_body">
-    <header class="header page__section">
+    <header class="header page__section" hidden>
       <div class="container">
         <div class="header_nav">
           <a href="#menu" class="icon"></a>
@@ -155,19 +155,105 @@
         </div>
       </section>
 
-      <section class="page__section currentEvents" id="gallery">
+      <section class="page__section gallery" id="gallery">
         <div class="container">
           <h2 class="page__section-title">
             Галерея
           </h2>
 
           <div class="grid grid--desktop">
+            <img
+              class="
+                grid__item
+                grid__item--tablet-1-3
+                grid__item--desktop-1-4
+                gallery__photo
+              "
+              src="./images/g1.jpg"
+              alt="g1"
+            >
 
+            <img
+              class="
+                grid__item
+                grid__item--tablet-4-6
+                grid__item--desktop-5-12
+                gallery__photo
+              "
+              src="./images/g2.jpg"
+              alt="g2"
+            >
+
+            <img
+              class="
+                grid__item
+                grid__item--tablet-1-3
+                grid__item--desktop-1-8
+                gallery__photo
+                gallery__photo--desktop
+              "
+              src="./images/g3.jpg"
+              alt="g3"
+            >
+
+            <img
+              class="
+                grid__item
+                grid__item--tablet-4-6
+                grid__item--desktop-9-12
+                gallery__photo
+                gallery__photo--desktop
+              "
+              src="./images/g4.jpg"
+              alt="g4"
+            >
+
+            <div
+              class="
+                gallery__dots
+                grid__item
+                grid__item--tablet-1-6
+                grid__item--desktop-1-12
+              "
+            >
+              <p class="gallery__dot"></p>
+              <p class="gallery__dot"></p>
+              <p class="gallery__dot"></p>
+              <p class="gallery__dot"></p>
+            </div>
           </div>
         </div>
       </section>
 
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__subscription">
+            <h2 class="footer__subscription--title">Підписка</h2>
 
+            <p class="footer__subscription--paragraf">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <div class="footer__subscription--mail">
+              <input
+                class="footer__subscription--mail-input"
+                type="email"
+                placeholder="E-mail"
+                required>
+
+              <a class="footer__subscription--mail-button" href="#">
+                <img
+                  class="footer__subscription--mail-arrow"
+                  src="./images/arrow.svg"
+                  alt="arrow"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+      </footer>
     </main>
   </body>
 </html>
