--- a/src/index.html
+++ b/src/index.html
@@ -139,14 +139,74 @@
         <div class="wrap">
           <h2 class="gallery__title">Галерея</h2>
 
-          <div class="gallery__slider--mobile grid"></div>
+          <div class="gallery__slider slider">
+            <div class="slider__slides">
+              <input
+              type="radio"
+              name="r"
+              class="slider__radio"
+              id="r1"
+              checked
+              >
 
-          <div class="gallery__buttons">
+              <input
+              type="radio"
+              name="r"
+              class="slider__radio"
+              id="r2"
+              >
 
+              <input
+              type="radio"
+              name="r"
+              class="slider__radio"
+              id="r3"
+              >
+
+              <input
+              type="radio"
+              name="r"
+              class="slider__radio"
+              id="r4"
+              >
+
+              <div class="slider__slide slider__slide-s1">
+                <img src="./images/gallery1.jpg" alt="picture" class="slider__slide-image">
+              </div>
+
+              <div class="slider__slide">
+                <img src="./images/gallery2.jpg" alt="picture" class="slider__slide-image">
+              </div>
+
+              <div class="slider__slide">
+                <img src="./images/gallery3.jpg" alt="picture" class="slider__slide-image">
+              </div>
+
+              <div class="slider__slide">
+                <img src="./images/gallery4.jpg" alt="picture" class="slider__slide-image">
+              </div>
+
+              <div class="slider__dots">
+                <label for="r1" class="slider__dot slider__dot--1"></label>
+
+                <label for="r2" class="slider__dot slider__dot--2"></label>
+
+                <label for="r3" class="slider__dot slider__dot--3"></label>
+
+                <label for="r4" class="slider__dot slider__dot--4"></label>
+              </div>
+            </div>
           </div>
 
+
           <div class="gallery__slider--desktop grid">
-            <div class="gallery__slider-item gallery__slider-item--1 grid__item--Desktop-1-5"></div>
+            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-1 grid__item--Desktop-1-5"></div>
+
+            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-2 grid__item--Desktop-6-12"></div>
+
+            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-3 grid__item--Desktop-1-8"></div>
+
+            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-4 grid__item--Desktop-9-12"></div>
           </div>
         </div>
       </div>
