current gallery added

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,11 @@
     </header>
 
     <main class="page__main">
-      <section class="page__section currentEvents" id="currentEvents">
+      <section
+        class="page__section currentEvents"
+        id="currentEvents"
+        hidden
+      >
         <div class="container">
           <h2 class="page__section-title">
                 Актуальні події
@@ -155,7 +159,11 @@
         </div>
       </section>
 
-      <section class="page__section gallery" id="gallery">
+      <section
+        class="page__section gallery"
+        id="gallery"
+        hidden
+      >
         <div class="container">
           <h2 class="page__section-title">
             Галерея
@@ -250,6 +258,7 @@
               </a>
             </div>
           </div>
+
         </div>
 
 
