--- a/src/index.html
+++ b/src/index.html
@@ -171,19 +171,19 @@
               >
 
               <div class="slider__slide slider__slide-s1">
-                <img src="./images/gallery1.jpg" alt="picture" class="slider__slide-image">
+                <div class="slider__slide-image slider__slide-image-1"></div>
               </div>
 
               <div class="slider__slide">
-                <img src="./images/gallery2.jpg" alt="picture" class="slider__slide-image">
+                <div class="slider__slide-image slider__slide-image-2"></div>
               </div>
 
               <div class="slider__slide">
-                <img src="./images/gallery3.jpg" alt="picture" class="slider__slide-image">
+                <div class="slider__slide-image slider__slide-image-3"></div>
               </div>
 
               <div class="slider__slide">
-                <img src="./images/gallery4.jpg" alt="picture" class="slider__slide-image">
+                <div class="slider__slide-image slider__slide-image-4"></div>
               </div>
 
               <div class="slider__dots">
