--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,6 @@
       <section
         class="page__section currentEvents"
         id="currentEvents"
-        hidden
       >
         <div class="container">
           <h2 class="page__section-title">
@@ -134,6 +133,7 @@
                 grid__item--tablet-1-6
                 grid__item--desktop-1-12
                 currentEvents__photo
+                currentEvents__photo--3
               "
               src="./images/AS3.jpg"
               alt="AS1"
@@ -162,7 +162,6 @@
       <section
         class="page__section gallery"
         id="gallery"
-        hidden
       >
         <div class="container">
           <h2 class="page__section-title">
@@ -187,6 +186,7 @@
                 grid__item--tablet-4-6
                 grid__item--desktop-5-12
                 gallery__photo
+                gallery__photo--2
               "
               src="./images/g2.jpg"
               alt="g2"
@@ -198,6 +198,7 @@
                 grid__item--tablet-1-3
                 grid__item--desktop-1-8
                 gallery__photo
+                gallery__photo--3
                 gallery__photo--desktop
               "
               src="./images/g3.jpg"
@@ -210,6 +211,7 @@
                 grid__item--tablet-4-6
                 grid__item--desktop-9-12
                 gallery__photo
+                gallery__photo--4
                 gallery__photo--desktop
               "
               src="./images/g4.jpg"
@@ -234,34 +236,179 @@
       </section>
 
       <footer class="footer">
-        <div class="container">
-          <div class="footer__subscription">
-            <h2 class="footer__subscription--title">Підписка</h2>
+        <div class="footer__subscription">
+          <h2 class="footer__subscription--title">Підписка</h2>
 
-            <p class="footer__subscription--paragraf">
-              Бути в курсі всіх актуальних подій та останніх новин.
-            </p>
+          <p class="footer__subscription--paragraf">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
 
-            <div class="footer__subscription--mail">
-              <input
-                class="footer__subscription--mail-input"
-                type="email"
-                placeholder="E-mail"
-                required>
+          <div class="footer__subscription--mail">
+            <input
+              class="footer__subscription--mail-input"
+              type="email"
+              placeholder="E-mail"
+              required>
 
-              <a class="footer__subscription--mail-button" href="#">
-                <img
-                  class="footer__subscription--mail-arrow"
-                  src="./images/arrow.svg"
-                  alt="arrow"
-                >
-              </a>
-            </div>
+            <a class="footer__subscription--mail-button" href="#">
+              <img
+                class="footer__subscription--mail-arrow"
+                src="./images/arrow.svg"
+                alt="arrow"
+              >
+            </a>
           </div>
-
         </div>
 
+        <div class="container">
+          <div class="grid footer__contacts">
+            <div
+              class="
+                footer__logoSocials
+                grid__item--1-2
+                grid__item--tablet-1-1
+                grid__item--desktop-1-1
+              "
+            >
+              <a href="#">
+                <img
+                  class="footer__logoSocials--logo"
+                  src="./images/NAMU.png"
+                  alt="logo"
+                >
+              </a>
 
+              <div class="footer__logoSocials--socials">
+                <a href="https://www.facebook.com/">
+                  <img
+                    class="footer__logoSocials--socials-facebook"
+                    src="./images/Facebook.png"
+                    alt="Facebook"
+                  >
+                </a>
+
+                <a href="https://www.instagram.com/">
+                  <img
+                    class="footer__logoSocials--socials-instagram"
+                    src="./images/instagram.png"
+                    alt="instagram"
+                  >
+                </a>
+              </div>
+            </div>
+
+            <div
+              class="
+                footer__contacts--schedule
+                grid__item--1-1
+                grid__item--tablet-2-3
+                grid__item--desktop-3-4
+              "
+            >
+              <p>
+                Графік роботи
+                <br>
+                <br>
+              </p>
+
+              <p class="footer__contacts--schedule-hours">
+                <strong>12:00 — 20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong> четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br>
+                <br>
+                <br>
+                Вихідні понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+
+            <div
+              class="
+                footer__contacts--contact
+                grid__item--2-2
+                grid__item--tablet-4-5
+                grid__item--desktop-5-6
+              "
+            >
+              <p>
+                Контакти:
+                <br>
+                <br>
+              </p>
+
+              <p>
+                <a class="footer__contacts--contact-address" href="https://goo.gl/maps/XASDZvWwfePSJiWX7">вул. М. Грушевського, 6; Київ, 01001</a><br>
+                тел. +38 (044) 278-13-57 <br>
+                факс +38 (044) 278-74-54 <br>
+                <a class="footer__contacts--contact-email" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+              </p>
+            </div>
+
+            <a class="footer__contacts--up grid__item--2-2" href="#">
+              <div class="footer__contacts--up-round">
+                <img
+                  class="footer__contacts--up-arrow"
+                  src="./images/up.svg"
+                  alt="up"
+                >
+              </div>
+            </a>
+
+            <div
+              class="
+                footer__contacts--line
+                grid__item--1-2
+                grid__item--tablet-2-5
+                grid__item--desktop-7-7
+              "
+            >
+            </div>
+
+            <div
+              class="
+                footer__contacts--gallery
+                grid__item--tablet-2-3
+                grid__item--desktop-8-9
+              "
+            >
+              <p>
+                <a class="footer__contacts--gallery-gallery" href="#gallery">Галерея</a>
+                <br><br>
+                <a class="footer__contacts--gallery-show" href="#show">Виставки та події</a>
+              </p>
+            </div>
+
+            <div
+              class="
+                footer__contacts--about
+                grid__item--tablet-4-5
+                grid__item--desktop-10-11
+              "
+            >
+              <p>
+                <a class="footer__contacts--about-about" href="#about">Про Нас</a>
+                <br><br>
+                <a class="footer__contacts--about-contacts" href="#contacts">Контакти</a>
+              </p>
+            </div>
+
+            <div
+              class="
+                footer__contacts--bottom
+                grid__item--1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-1-12
+              "
+            >
+              <p class="footer__contacts--bottom-1">Designed by Zhyriada Marina</p>
+              <p class="footer__contacts--bottom-2">Copyright © 2019. All Rights Reserved.</p>
+            </div>
+          </div>
+        </div>
       </footer>
     </main>
   </body>
