--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMU</title>
+    <title>Художній музей</title>
     <link rel="shortcut icon" href="../src/images/NAMU.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page__section header grid grid--widescreen">
@@ -54,7 +52,7 @@
               <a href="#contacts" class="menu__link">Контакти</a>
             </li>
           </ul>
-          <h1 class="menu__logo">NA <br> MU</h1>
+          <a href="#" class="menu__logo">NA <br> MU</a>
         </div>
       </div>
     </div>
@@ -210,10 +208,142 @@
           </div>
         </div>
       </div>
+
+      <div class="page__section subscribe" id="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+
+        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <div class="subscribe__button">
+          <form
+          action="#"
+          method="get"
+          class="subscribe__button-form"
+          >
+            <label for="input">
+              <input
+              type="email"
+              name="email"
+              placeholder="email"
+              class="subscribe__input"
+              required
+              >
+            </label>
+
+            <button class="subscribe__img-container">
+              <img
+              class="subscribe__button-img"
+              src="./images/arrow-right-black.svg"
+              alt="arrow">
+            </button>
+          </form>
+        </div>
+      </div>
     </main>
 
-    <footer class="page__section footer">
+    <footer class="page__section footer" id="contacts">
+      <div class="wrap">
+        <div class="footer__content grid">
+          <div class="footer__logo-container grid__item--1-2 grid__item--Tablet-1-1 grid__item--Desktop-1-1">
+            <a href="#" class="footer__logo">NA <br> MU</a>
 
+            <div class="footer__icons-container">
+              <a
+              class="footer__icon footer__icon--fb"
+              href="#"
+              ></a>
+              <a
+              class="footer__icon footer__icon--inst"
+              href="#"
+              ></a>
+            </div>
+
+
+          </div>
+
+          <div class="footer__info-container grid__item--1-2 grid__item--Tablet-2-5 grid__item--Desktop-3-6">
+            <div class="footer__info-content">
+              <div class="footer__info-block">
+                <h3 class="footer__info-text">Графік роботи</h3>
+                <ul class="footer__info-scedule">
+                  <li class="footer__info-scedule--item">
+                    <span class="footer__info-scedule--item-bold">
+                      12:00 — 20:00
+                    </span>
+                    середа
+                  </li>
+                  <li class="footer__info-scedule--item">
+                    <span class="footer__info-scedule--item-bold">
+                      12:00 — 20:00
+                    </span>
+                    четвер
+                  </li>
+                  <li class="footer__info-scedule--item">
+                    <span class="footer__info-scedule--item-bold">
+                      12:00 — 20:00
+                    </span>
+                    п’ятниця
+                  </li>
+                  <li class="footer__info-scedule--item">
+                    <span class="footer__info-scedule--item-bold">
+                      12:00 — 19:00
+                    </span>
+                    субота
+                  </li>
+                  <li class="footer__info-scedule--item">
+                    <span class="footer__info-scedule--item-bold">
+                      12:00 — 19:00
+                    </span>
+                    неділя
+                  </li>
+                </ul>
+                <p class="footer__info-nwh">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
+              <div class="footer__info-block">
+                <h3 class="footer__info-text">Контакти</h3>
+                <p class="footer__info-nwh">
+                  <a
+                  href="https://goo.gl/maps/PKXeYT3yAYgLjicR8"
+                  target="_blank"
+                  class="footer__link"
+                  rel="noopener noreferrer">вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+
+                  <a
+                  href="tel:+38-044-278-13-57"
+                  class="footer__link"
+                  >тел. +38 (044) 278-13-57</a>
+
+                  <a
+                  href="tel:+38-044-278-74-54"
+                  class="footer__link"
+                  >факс +38 (044) 278-74-54</a>
+
+                  <a
+                  href="mailto: info@namu.kiev.ua"
+                  class="footer__link"
+                  >e-mail: info@namu.kiev.ua</a>
+                </p>
+              </div>
+            </div>
+            <a href="#" class="footer__button"></a>
+          </div>
+
+          <div class="nav footer__nav-block grid__item--1-1 grid__item--Tablet-2-3 grid__item--Desktop-8-9">
+            <a href="#gallery" class="nav__link">Галерея</a>
+            <a href="#podii" class="nav__link">Виставки та події</a>
+          </div>
+
+          <div class="nav footer__nav-block grid__item--2-2 grid__item--Tablet-4-4 grid__item--Desktop-10-10">
+            <a href="#" class="nav__link">Про Нас</a>
+            <a href="#contacts" class="nav__link">Контакти</a>
+          </div>
+        </div>
+        <div class="footer__copywrite">
+          <h3 class="footer__copywrite-text">Designed by Zhyriada Marina</h3>
+          <h3 class="footer__copywrite-text">Copyright © 2019. All Rights Reserved.</h3>
+        </div>
+      </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
