index edited and cheked

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <a href="#menu" class="header__menu header__menu--tablet"></a>
           <h1 class="header__content-title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-          <a href="#" class="header__content-button">Квитки</a>
+          <a href="#podii" class="header__content-button">Квитки</a>
 
           <div class="header__content-element">
             <div class="header__content-element--line"></div>
@@ -250,11 +250,13 @@
             <div class="footer__icons-container">
               <a
               class="footer__icon footer__icon--fb"
-              href="#"
+              target="_blank"
+              href="https://www.facebook.com/namu.museum/"
               ></a>
               <a
               class="footer__icon footer__icon--inst"
-              href="#"
+              target="_blank"
+              href="https://www.instagram.com/namu.museum/?hl=en"
               ></a>
             </div>
 
@@ -335,7 +337,7 @@
           </div>
 
           <div class="nav footer__nav-block grid__item--2-2 grid__item--Tablet-4-4 grid__item--Desktop-10-10">
-            <a href="#" class="nav__link">Про Нас</a>
+            <a href="#subscribe" class="nav__link">Про Нас</a>
             <a href="#contacts" class="nav__link">Контакти</a>
           </div>
         </div>
