--- a/src/index.html
+++ b/src/index.html
@@ -308,6 +308,7 @@
           <form
           action="#"
           method="get"
+          id="form"
           class="subscribe__button-form"
           >
             <label for="input">
