bugs fixed after comments

--- a/src/index.html
+++ b/src/index.html
@@ -109,11 +109,7 @@
             grid__item--Tablet-1-6
             grid__item--Desktop-1-7"
             >
-              <img
-              class="podii__image--item"
-              src="images/podii1.jpg"
-              alt="podii1"
-              >
+              <div class="podii__image--item podii__image--item-1"></div>
             </div>
 
             <div class="podii__content
@@ -147,11 +143,7 @@
             grid__item--Tablet-1-6
             grid__item--Desktop-1-7"
             >
-              <img
-              class="podii__image--item"
-              src="images/podii2.jpg"
-              alt="podii2"
-              >
+              <div class="podii__image--item podii__image--item-2"></div>
             </div>
 
             <div
