--- a/src/index.html
+++ b/src/index.html
@@ -393,7 +393,13 @@
                   тел. +38 (044) 278-13-57
                   факс +38 (044) 278-74-54
                 </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__adress"
+                  target="_blank"
+                >
                   e-mail: info@namu.kiev.ua
+                </a>
               </div>
             </div>
           </div>
@@ -415,7 +421,6 @@
           </div>
 
           <div class="footer__rights">
-            <div>Designed by Zhyriada Marina</div>
             <div>Copyright © 2019. All Rights Reserved.</div>
           </div>
         </div>
