--- a/src/index.html
+++ b/src/index.html
@@ -366,14 +366,16 @@
             </a>
 
             <a 
-              href="#"
+              href="https://www.facebook.com"
+              target="_blank"
               class="footer__social
               footer__social--facebook
               icon">
             </a>
 
             <a 
-              href="#"
+              href="https://www.instagram.com"
+              target="_blank"
               class="footer__social
               footer__social--instagram
               icon">
